logs/Slang/chapter-6/6.16.2--string_putc.sv.log
name: string_putc
description: string.putc()  tests
should_fail: 0
tags: 6.16.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.2--string_putc.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.2--string_putc.sv:10:4: error: invalid member access for type 'string'
		a.putc(2, "B");
		~^~~~~
